--- a/src/example.html
+++ b/src/example.html
@@ -44,24 +44,36 @@
         <h6>Manager</h6>
     </div>
     <div class="card-body">
-        <h5 class="card-title"></h5>
+        <h5 class="card-title">Judy</h5>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">ID: </li>
-        <li class="list-group-item">Email: </li>
-        <li class="list-group-item">Office Number: </li>
+        <li class="list-group-item">ID: 55</li>
+        <li class="list-group-item">Email: <a href="mailto:judy@example.com">judy@example.com</a></li>
+        <li class="list-group-item">Office Number: 500</li>
     </ul>
 </div><div class="card">
     <div class="card-header">
         <h6>Engineer</h6>
     </div>
     <div class="card-body">
-        <h5 class="card-title"></h5>
+        <h5 class="card-title">Joe</h5>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">ID: </li>
-        <li class="list-group-item">Email: </li>
+        <li class="list-group-item">ID: 21</li>
+        <li class="list-group-item">Email: <a href="mailto:joepshoulak2@gmail.com">joepshoulak2@gmail.com</a></li>
         <li class="list-group-item">GitHub Username: <a href="https://github.com/joepshoulak" target="_blank">joepshoulak</a></li>
+    </ul>
+</div><div class="card">
+    <div class="card-header">
+        <h6>Intern</h6>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Jake</h5>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">ID: 34</li>
+        <li class="list-group-item">Email: <a href="mailto:jake@example.com">jake@example.com</a></li>
+        <li class="list-group-item">School: Columbia</li>
     </ul>
 </div>
 
